# fermo_core

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  parameters.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.github/workflows/: ci.yml  publish_pypi.yml
example_data/: .~lock.case_study_peak_table_quant_full.csv#  case_study_parameters.json  dummy_bioactivity_quant_concentration.csv  dummy_bioactivity_quant_percentage.csv  fermo.json  minimal.params.json
example_data/JABTEZ000000000.1/: JABTEZ010000001.1.region001.gbk  JABTEZ010000001.1.region002.gbk  JABTEZ010000001.1.region003.gbk  JABTEZ010000001.1.region004.gbk  JABTEZ010000001.1.region005.gbk  JABTEZ010000002.1.region001.gbk  JABTEZ010000002.1.region002.gbk  JABTEZ010000002.1.region003.gbk  JABTEZ010000002.1.region004.gbk  JABTEZ010000002.1.region005.gbk  JABTEZ010000002.1.region006.gbk  JABTEZ010000002.1.region007.gbk  JABTEZ010000003.1.region001.gbk  JABTEZ010000003.1.region002.gbk  JABTEZ010000003.1.region003.gbk  JABTEZ010000003.1.region004.gbk  JABTEZ010000003.1.region005.gbk  JABTEZ010000004.1.region001.gbk  JABTEZ010000004.1.region002.gbk  JABTEZ010000005.1.region001.gbk  JABTEZ010000005.1.region002.gbk  JABTEZ010000005.1.region003.gbk  JABTEZ010000006.1.region001.gbk  JABTEZ010000006.1.region002.gbk  JABTEZ010000006.1.region003.gbk  JABTEZ010000008.1.region001.gbk  JABTEZ010000009.1.region001.gbk  index.html
example_data/JABTEZ000000000.1/css/: bacteria.css
example_data/JABTEZ000000000.1/js/: antismash.js
fermo_core/: class_params_handler.py  main.py
fermo_core/config/: class_default_settings.py  class_logger.py  default_parameters.json  generic_other_neg.csv  kersten_glycosides.csv  kersten_ribosomal.csv  schema.json
fermo_core/config/loss_libs/: generic_bio_pos.csv  generic_other_pos.csv  kersten_nonribosomal.csv
fermo_core/data_analysis/: class_analysis_manager.py  class_chrom_trace_calculator.py
fermo_core/data_analysis/annotation_manager/: class_adduct_annotator.py  class_annotation_manager.py  class_fragment_annotator.py  class_mod_cos_annotator.py  class_mod_cosine_matcher.py  class_ms2deepscore_annotator.py  class_ms2deepscore_matcher.py  class_ms2query_annotator.py  class_mzmine_ann_parser.py  class_neutral_loss_annotator.py
fermo_core/data_analysis/blank_assigner/: class_blank_assigner.py
fermo_core/data_analysis/chrom_trace_calculator/: class_chrom_trace_calculator.py
fermo_core/data_analysis/feature_filter/: class_feature_filter.py
fermo_core/data_analysis/group_assigner/: class_group_assigner.py
fermo_core/data_analysis/group_factor_assigner/: class_group_factor_assigner.py
fermo_core/data_analysis/phenotype_manager/: class_phen_qual_assigner.py  class_phen_quant_ass.py  class_phen_quant_assigner.py  class_phen_quant_conc_assigner.py  class_phen_quant_perc_assigner.py  class_phenotype_manager.py
fermo_core/data_analysis/score_assigner/: class_score_assigner.py
fermo_core/data_analysis/sim_networks_manager/: class_mod_cosine_networker.py  class_ms2deepscore_networker.py  class_sim_networks_manager.py
fermo_core/data_processing/: class_parser.py  class_repository.py  class_stats.py  dataclass_stats.py
fermo_core/data_processing/builder/: class_feature_builder.py  class_general_feature_director.py  (+5 more)
fermo_core/input_output/: additional_module_parameter_managers.py  class_argparse_manager.py  class_comm_line_handler.py  class_export_manager.py  class_file_manager.py  class_parameter_manager.py  class_params_handler.py  class_summary_writer.py  class_validation_handler.py  class_validation_manager.py  core_module_parameter_managers.py  dataclass_params_handler.py  input_file_parameter_managers.py  output_file_parameter_managers.py  param_handlers.py
fermo_core/utils/: utility_method_manager.py
mibig_ms_library_generation/: main.py
mibig_ms_library_generation/data_processing/: class_cfmid_manager.py  class_parsing_manager.py  class_postprocessing_manager.py  class_preprocessing_manager.py
mibig_preprocessing/: README.md  add_mibig_metadata.py  class_parsing_manager.py  library_prep.py  main.py  parse_mibig_entries.py  run_cfmid.py
mibig_preprocessing/data_processing/: class_postprocessing_manager.py  class_preprocessing_manager.py
tests/: conftest.py  test_class_comm_line_handler.py  test_class_feature_builder.py  test_class_general_feature_director.py  test_class_params_handler.py  test_class_repository.py  test_class_sample_builder.py  test_class_samples_director.py  test_class_specific_feature_director.py  test_class_stats.py  test_class_validation_handler.py  test_conftest.py
tests/example_files/: example_group_fermo.csv  example_msms_mgf.mgf  example_parameters.json  example_phenotype_fermo.csv  example_speclib_mgf.mgf  schema.json
tests/test_config/: test_class_default_settings.py  test_class_logger_setup.py  test_json_schema.py
tests/test_data/: test.parameters.json  test_integration.py
tests/test_data_analysis/: conftest.py  test_class_analysis_manager.py  test_class_chrom_trace_calculator.py  test_class_sim_networks_manager.py  test_feature_filter.py
tests/test_data_processing/: test_class_general_feature_director.py  test_class_parser.py  test_class_repository.py  test_class_sample_builder.py  test_class_samples_director.py  test_class_stats.py  test_dataclass_feature.py  test_dataclass_sample.py
tests/test_input_output/: test_class_argparse_manager.py  test_class_comm_line_handler.py  test_class_file_manager.py  test_class_parameter_manager.py  test_class_parameter_manager_new.py  test_class_summary_writer.py  test_class_validation_handler.py  test_class_validation_manager.py  test_dataclass_params_handler.py  test_export_manager.py  test_param_handlers.py
tests/test_utils/: test_utility_method_manager.py
(+650 files in other folders)
