[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fermo_core"
description = "Processing part of program FERMO"
version = "0.1.0"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
]

dependencies = [
    "argparse==1.4.0",
    "jsonschema==4.19.0",
    "matchms==0.24.0",
    "pandas==2.0.3",
    "pydantic==2.5.2",
    "pyteomics==4.6.3",
    "coloredlogs==15.0.1",
    "func-timeout==4.3.5",
    "ms2deepscore==0.5.0",
    "keras==3.0.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.4.0",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "sphinx==7.1.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "fermo_core"
]
filterwarnings = [
    'ignore:Please use \`get_index_dtype\` from the \`scipy.sparse\` namespace:DeprecationWarning'
]
